# KH_EX_SakanaM_T

./: .gitignore  KH_EX_SakanaM_T.sln  README.md  Sakana.code-workspace
KH_EX_SakanaM_T/: CMakeCache.txt  CMakeLists.txt  KH_EX_SakanaM_T.vcxproj  KH_EX_SakanaM_T.vcxproj.filters  Map.h  Object.h  Position.h  main.cpp  struct_static.h
KH_EX_SakanaM_T/KH_EX_SakanaM_T/: AI.h  Animate.h  Area.h  AreaManager.h  Ball.cpp  Ball.h  Bar.h  Boom.h  Camera.h  Character.h  Collision.h  Crab.cpp  Crab.h  Fish.h  GameScene.cpp  GameScene.h  Hitbox.h  Input.h  Library.h  MainGame.h  Map.h  Map_Maker.h  Matrix.h  MenuScene.h  Mouse.h  Movement.h  Object.h  Position.h  RWADME.txt  Renderer.h  Ring.h  Scene.h  Shake.h  Shape.h  Shape_Maker.h  Slideboard.cpp  Slideboard.h  Target.h  Timer.h  UI.h  (+3 more)
KH_EX_SakanaM_T/dot/: includes.dot
KH_EX_SakanaM_T/include/: Game.h  GameManager.h  GenerateIncludesGraph.ps1  Input.h  Library.h  MainGame.h  MessageSystem.h  SceneMangaer.h  includes.dot
KH_EX_SakanaM_T/include/base/: Area.hpp  Collision.h  Collision.hpp  Movement.hpp  Position.hpp  Shape.hpp  Vector.hpp  base.hpp  include_base.hpp  ring.hpp
KH_EX_SakanaM_T/include/object/: Area.hpp  Camera.hpp  GameObjects.hpp  Object.hpp  Renderer.hpp
KH_EX_SakanaM_T/include/object/camera/: Camera.hpp
KH_EX_SakanaM_T/include/system/: Game.hpp  GameManager.hpp  GameObjectFactory.hpp  GraphInterface.hpp  Library.hpp  MessageSystem.hpp
KH_EX_SakanaM_T/note/: Ring.h
KH_EX_SakanaM_T/note/animate/: Animate.h
KH_EX_SakanaM_T/note/area/: Map_Maker.h
KH_EX_SakanaM_T/note/object/: Hitbox.h
KH_EX_SakanaM_T/note/scene/: GameScene.h
KH_EX_SakanaM_T/src/: Button.h  Fish.cpp  GameManager.cpp  MainGame.h
KH_EX_SakanaM_T/src/base/: Area.cpp  Collision.cpp  Movement.cpp  Object.cpp  Position.cpp  Shape.cpp  Vector.cpp  Zone.cpp
KH_EX_SakanaM_T/src/object/: Area.cpp  Ball.h  Camera.cpp  Camera.h  Crab.h  Fish.h  GameObject.cpp  Object.cpp  Position.cpp  Renderer.cpp
KH_EX_SakanaM_T/src/object/camera/: Camera.cpp
KH_EX_SakanaM_T/src/system/: Game.cpp  GameManager.cpp  GameObjectFactory.cpp  GraphInterface.cpp  GraphInterface_Input.cpp  Library.cpp  MessageSystem.cpp  MessageSystem_G.cpp  MessageSystem_S.cpp
Note/: Matrix.h  Note.vcxproj  Note.vcxproj.filters  Shape.h  Shape_Maker.h  main.cpp
Note2/: Note2.vcxproj  main.cpp
Project/: CMakeLists.txt  note.txt
Project/note/: note.txt
Project/src/: CMakeLists.txt  main.cpp
Project/src/animation_test/: animation.hpp
Project/src/game_base/: AnimationList.cpp  Area.cpp  CMakeLists.txt  Collision.cpp  Movement.cpp  Object.cpp  Position.cpp  Shape.cpp  Timer.cpp  Vector.cpp  Zone.cpp  base.hpp  include_base.cpp  include_base.hpp  ring.hpp  toolfuns.cpp
Project/src/game_factory/: CMakeLists.txt  game_factory.cpp  game_factory.hpp  library.cpp  library.hpp
Project/src/game_object/: Bullet.cpp  CMakeLists.txt  Camera.cpp  Fish.cpp  GameObject.cpp  GameObjects.hpp  Object.cpp  Zone.cpp  animation.hpp  game_factory.cpp  game_factory.hpp  library.cpp  library.hpp
Project/src/game_system/: CMakeLists.txt  Game.cpp  GameManager.cpp  GameManager.hpp  GraphInterface.cpp  GraphInterface.hpp  Input.cpp  Library.cpp  Library.hpp  MessageSystem_G.cpp  game_systems.hpp
Project/src/game_widgets/: CMakeLists.txt  Zone.cpp  bar.cpp  game_widgets.cpp  game_widgets.hpp
Project/test/: CMakeLists.txt  Input.hpp
Project/test/object/: Slideboard.h
Project/test/shape/: Shape_Maker.h
note1/: CMakeLists.txt  main.cpp
note1/src/: Matrix.h  Shape.h  Shape_Maker.h  main.cpp
note2/: CMakeLists.txt  main.cpp
note2/include/: four_arithmetic.h
note2/src/: four_arithmetic_01.cpp  four_arithmetic_02.cpp
